<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="default_notification_channel_id" translatable="false">uvstudentnotifchannelid</string>
    <string name="msg_token_fmt" translatable="false">Message token fmt</string>
    <string name="app_name">SuperFix</string>
    <string name="resetpassword">Reset Password</string>
    <string name="title_explore">Explore</string>
    <string name="title_app">Univirtual</string>
    <string name="signin_message">Sign in to access quality tuition and materials</string>
    <string name="title_settings">Settings</string>
    <string name="title_accout">Account</string>
    <string name="title_enrolment">Services</string>
    <string name="title_achievements">Achievements</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="addreminder">Add Reminder</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_settings">Settings</string>
    <string name="menu_item_reply">Delete</string>
    <string name="country_prompt">Choose a Title</string>
    <string-array name="title_arrays">
        <item>None selected</item>
        <item>Prof.</item>
        <item>Dr.</item>
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
    </string-array>
    <string-array name="identification_arrays">
        <item>None selected</item>
        <item>NHIS</item>
        <item>Voter\'s ID</item>
        <item>Ghana Card</item>
        <item>Passport</item>
    </string-array>
    <string-array name="vehicle_type_arrays">
        <item>None selected</item>
        <item>Small Car</item>
        <item>Motor Bike</item>
        <item>Van</item>
    </string-array>
    <string-array name="duration_arrays">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string-array name="max_courses_arrays">
        <item>3 subjects</item>
        <item>8 subjects</item>
    </string-array>
    <string-array name="marital_arrays">
        <item>None selected</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>None selected</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="education_arrays">
        <item>None selected</item>
        <item>Basic</item>
        <item>Secondary</item>
        <item>Vocational/Technical</item>
        <item>Bachelors Degree</item>
        <item>Post Graduate</item>
    </string-array>
    <string-array name="years_0f_exp_arrays">
        <item>None selected</item>
        <item>1 - 3 years</item>
        <item>4 - 9 years</item>
        <item>10+ years</item>
    </string-array>
    <string name="search">Search...</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_timetable">Timetable</string>
    <string name="attendance">Attendance</string>
    <string name="profile">Profile</string>
    <string name="assignment">Assignment</string>
    <string name="upcoming">Upcoming Today</string>
    <string name="allmyclasses">All My Classes</string>
    <string name="expiredsubscriptions">Inactively Subscribed</string>
    <string name="activesubscriptions">Actively Subscribed</string>
    <string name="status">Status</string>
    <string name="score">Score</string>
    <string name="viewassignment">View Assignment</string>
    <string name="submitassignment">Submit Assignment</string>
    <string name="viewsubmitedassignment">View Submitted Assignment</string>
    <string name="topic">Topic</string>
    <string name="coursepath">Course</string>
    <string name="website">Official Website</string>
    <string name="display">Display</string>
    <string name="webportal">Web Portal</string>
    <string name="logout">Logout</string>
    <string name="nightmode">Night mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="enterclass">Enter classroom</string>
    <string name="renewsubscription">Subscribe</string>
    <string name="ratecourse">Rate Course</string>
    <string name="unenroll">Unenroll</string>
    <string name="uploadmaterial">Click to upload</string>
    <string name="uploadmessage">Submit your course work by uploading using the button below</string>
    <string name="mypayments">My Recent Payments</string>
    <string name="inclass">In class</string>
    <string name="playback">Playback</string>
    <string name="selectoption">Select resource option</string>
    <string name="classchat">Class chat</string>
    <string name="classquiz">Class quiz</string>
    <string name="pastquestions">Past Questions</string>
    <string name="classconferencecall">Class conference call</string>
    <string name="liveclassaudiostream">Live class audio stream</string>
    <string name="classdocs">Class Documents</string>
    <string name="classsession">Class session</string>
    <string name="recordedclassconferencecall">Recorded class conference call</string>
    <string name="recordedclassaudiostream">Recorded class audio stream</string>
    <string name="classdoc">Upcoming Class Document</string>
    <string name="recordedclassvideostream">Recorded class video stream</string>
    <string name="liveclass">Live class stream</string>
    <string name="liveclassvideostream">Live class video stream</string>
    <string name="liveclassstream">Live class stream</string>
    <string name="classpayback">Class playback</string>
    <string name="recordedaudio">Recorded class audio</string>
    <string name="recordedclassvideos">Recorded class videos</string>
    <string name="downloadableclassvideos">Downloadable class videos</string>
    <string name="description_delete_button">backspace</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="description_voicemail_button">voicemail</string>
    <string name="description_image_button_plus">plus</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters"></string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="description_dialpad_back">Navigate back</string>
    <string name="description_dialpad_overflow">More options</string>
    <string name="read_file">This app needs access to your file storage so that it can read files.</string>
    <string name="openfile">Open file</string>
    <string name="askquestion">Ask question</string>
    <string name="speaker">Speaker</string>
    <string name="leaveclass">Leave class</string>
    <string name="endplayback">End playback</string>
    <string name="mute">Mute</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="keypad">Keypad</string>
    <string name="addcall">Add call</string>
    <string name="active">Active</string>
    <string name="rationale_doc_picker">We need this pemission to read documents from device.</string>
    <string name="title_learn">My Courses</string>
    <string name="messages">My Groups</string>
    <string name="cancel">Cancel</string>
    <string name="unmute">Unmute</string>
    <string name="sackfromclass">Sack student</string>
    <string name="contact">Phone number</string>
    <string name="createcourse">Create Course</string>
    <string name="duration">Duration :</string>
    <string name="enterstudentphone">Enter student phone number</string>
    <string name="go">Go</string>
    <string name="next">Next</string>
    <string name="almostdone">Almost done!</string>
    <string name="verifymobilenumber">Verify MTN mobile number</string>
    <string name="shortfreecall">A short, <b>free</b> call will soon be  placed to our system to verify your number</string>
    <string name="didntplacecall">Didn\'t receive call?</string>
    <string name="completeverification">Click to complete verification</string>
    <string name="changenumber">Change number</string>
    <string name="answerhere">Answer here ...</string>
    <string name="myquestions">My questions</string>
    <string name="typequestionhere">Type question here</string>
    <string name="possibleanswers">Possible answers</string>
    <string name="questionnumber">Question number :</string>
    <string name="newgroup">New group</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="startgroupcall">Start group call</string>
    <string name="startover">Clear group and start over</string>
    <string name="defaul_sim_msg"><u>Multi-sim detected. Please set default sim for calls before clicking next otherwise verification will fail</u></string>
    <string name="live_interactive">Live interactive class lessons from seasoned instructors</string>
    <string name="available_for_download">Live class lessons become available for download or restreaming and you can follow at your own pace.</string>
    <string name="free_data">Free internet data bundle to subscribers for accessing external links</string>
    <string name="live">Live</string>
    <string name="recorded">Recorded</string>
    <string name="internet">Internet</string>
    <string name="get_started">Get Started</string>
    <string name="pending_verification">Pending verification</string>
    <string name="almost_done">Almost done!</string>
    <string name="retry_in">Retry in :</string>
    <string name="retry">Retry</string>
    <string name="error_contacting_server">Error contacting server. Please try again</string>
    <string name="assignment_date">Assignment Date</string>
    <string name="verification_failed">Verification failed!</string>
    <string name="number_cannot_be_used">This number cannot be used because it is linked to a teacher account.</string>
    <string name="unsubmitted">Unsubmitted</string>
    <string name="my_groups">My Groups</string>
    <string name="inviting_to_class">Inviting to class...</string>
    <string name="locking_student">Locking student...</string>
    <string name="unlocking_student">Unlocking student..</string>
    <string name="success">Success!</string>
    <string name="kicking_out_student">Kicking student out ...</string>
    <string name="successfully_kicked_student_out">Successfully kicked student out ...</string>
    <string name="kick_action_failed_for_user">Kick action failed for user</string>
    <string name="student_not_in_class">Student not in class ...</string>
    <string name="muting_student">Muting student</string>
    <string name="courses">Courses</string>
    <string name="error_loading_data">Error loading data.</string>
    <string name="there_are_currently_no_instructors_for_this_course">There are currently no instructors for this course.</string>
    <string name="attach_file_s">Attach file(s)</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="camera">Camera</string>
    <string name="assignment_title">Assignment title*</string>
    <string name="exit">Exit?</string>
    <string name="no_data_available">No data available.</string>
</resources>