<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_square"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@color/transparent"
            android:padding="16dp"
            android:src="@drawable/left" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="56dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/courses"
            android:textColor="@color/actual_white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_margin="8dp"
        android:gravity="center"
        tools:text="JHS >> English >> JHS 1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        tools:listitem="@layout/recycle_instructor" />

    <ImageView
        android:id="@+id/loadinggif"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:src="@drawable/spinner"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/retry_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:elevation="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/puzzled" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/error_loading_data" />

        <Button
            android:id="@+id/retrybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/bg_gradient"
            android:text="@string/retry"
            android:textColor="@color/actual_white" />
    </LinearLayout>

    <TextView
        android:id="@+id/noinstructorstext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/there_are_currently_no_instructors_for_this_course"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nocoursestest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/no_data_available"
        android:visibility="gone" />

</RelativeLayout>