<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/enterstudentphone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"

            android:layout_height="40dp"
            android:background="@drawable/rounded_edge"
            android:drawablePadding="8dp"
            android:hint="@string/contact"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="40dp"
            android:singleLine="true" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/phone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gobtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:text="@string/go"
            android:textColor="@color/actual_white" />

        <Button
            android:id="@+id/cancelbtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/actual_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/resultext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sending emailaddress..." />

        <ImageView
            android:id="@+id/load"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp" />

    </LinearLayout>
</LinearLayout>
